crates/jolt_java_fmt/tests/snapshots/recovery_snapshots__argument_list.snap
---
source: crates/jolt_java_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
class C { void m() { call(first, /* orphan */ , second); } }

formatted:
class C {
  void m() {
    call(first, /* orphan */  , second);
  }
}

diagnostics:
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(46), end: TextSize(47) }) message=expected expression
