crates/jolt_java_fmt/tests/snapshots/recovery_snapshots__block_with_formatter_ignore.snap
---
source: crates/jolt_java_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
class C { void m() {
  int before;
  // @formatter:off
  int raw=1+2;
  // @formatter:on
  /* block */ + ;
  int after;
} }

class MalformedInsideIgnore { void m() {
  // @formatter:off
  +             ;
  // @formatter:on
  int after;
} }

formatted:
class C {
  void m() {
    int before;
    // @formatter:off
    int raw=1+2;
    // @formatter:on
    /* block */
    +;
    int after;
  }
}

class MalformedInsideIgnore {
  void m() {
    // @formatter:off
    +             ;
    // @formatter:on
    int after;
  }
}

diagnostics:
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(105), end: TextSize(106) }) message=expected expression
code=java.parse.invalid_statement_expression severity=Error stage=Parser range=Some(TextRange { start: TextSize(105), end: TextSize(106) }) message=expected statement expression
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(202), end: TextSize(203) }) message=expected expression
code=java.parse.invalid_statement_expression severity=Error stage=Parser range=Some(TextRange { start: TextSize(202), end: TextSize(203) }) message=expected statement expression
