crates/jolt_java_fmt/tests/snapshots/recovery_snapshots__catch_parameter_modifiers.snap
---
source: crates/jolt_java_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
class C { void m() { try {} catch (final /* mod */ E e) {} } }

formatted:
class C {
  void m() {
    try {
    } catch (final /* mod */ E e) {
    }
  }
}

diagnostics:
(none)
