crates/jolt_java_fmt/tests/snapshots/recovery_snapshots__compilation_unit_top_level.snap
---
source: crates/jolt_java_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
/* top */ + ; class C {}
// JOLT-TRIVIA:file-tail

formatted:
/* top */
+;

class C {
}
// JOLT-TRIVIA:file-tail

diagnostics:
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(10), end: TextSize(11) }) message=unexpected token at top level
